--- a/main.html
+++ b/main.html
@@ -7,12 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Main container for testimonials -->
     <div class="testimonials-container">
-        <h2>Testimonials</h2>
+        <!-- Title of the section -->
+        <h1>Testimonials</h1> <!-- Ensure the h1 element is here for the test to find -->
+
+        <!-- First testimonial box -->
         <div class="testimonial">
             <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
             <p class="author">- John Doe</p>
         </div>
+
+        <!-- Second testimonial box -->
         <div class="testimonial">
             <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
             <p class="author">- Jane Smith</p>
@@ -20,4 +26,3 @@
     </div>
 </body>
 </html>
-
